MMT-3004: Fixed the Metadata Preview to be aligned up, no need to use flex-flow: column wrap.

--- a/app/assets/stylesheets/overrides/_metadatapreview.scss
+++ b/app/assets/stylesheets/overrides/_metadatapreview.scss
@@ -2,7 +2,6 @@
   max-width: 1725px;
   padding-right: 210px;
   padding-left: 30px;
-  flex-flow: column wrap;
 }
 
 th{
